# deep-report

./: .gitignore  ARCHITECTURE.md  DAILY_LOG.md  DESIGN.md  PLAN.md  README.md  pyproject.toml
config/: watchlist.json
docs/: v0.3-requirements.md
scripts/: quarterly_trigger.py
src/deep_report/: __init__.py  __main__.py  _llm_client.py  analyzer.py  cli.py  config.py  fetcher.py  valuation.py  westock_provider.py  writer.py
src/deep_report/prompts/: analyze.md  extract.md
tests/: test_analyzer.py  test_e2e.py
