[project]
name = "deep-report"
version = "0.1.0"
description = "财报深度分析引擎 — LLM驱动的季度/年度财务报告分析"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "volcengine-python-sdk[ark]>=1.0",
]

[project.scripts]
deep-report = "deep_report.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
